--- a/default.html
+++ b/default.html
@@ -35,7 +35,7 @@
         <div class="container">
             <div class="hero-content fade-in">
                 <h1 class="hero-title">Elite Hat</h1>
-                <p class="hero-subtitle">Front-End Learner | Aspiring AI Developer</p>
+                <p class="hero-subtitle">Tech Enthusiast | Front End Developer | Industry Analyst</p>
                 <p class="hero-intro">Building the foundation, one line of code at a time. Exploring the intersection of web development and artificial intelligence.</p>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View Projects</a>
