--- a/default.html
+++ b/default.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Elite Hat - Front-End Learner | Aspiring AI Developer. Personal portfolio showcasing learning journey and projects.">
+    <meta name="description" content="Elite Hat | Portfolio">
     <title>Elite Hat | Front-End Learner & Aspiring AI Developer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
