--- a/default.html
+++ b/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Elite Hat | Portfolio">
-    <title>Elite Hat | Front-End Learner & Aspiring AI Developer</title>
+    <title>Elite Hat | Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
