--- a/default.html
+++ b/default.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Navigation -->
+    <!-- Nav Bar -->
     <nav class="navbar" id="navbar">
         <div class="container">
             <div class="nav-brand">Elite Hat</div>
