--- a/default.html
+++ b/default.html
@@ -314,34 +314,10 @@
               </a>
               <a href="mailto:contact@elitehat.dev" class="contact-link">
                 <span class="contact-icon">✉️</span>
-                <span>Email (Placeholder)</span>
+                <span>Email</span>
               </a>
             </div>
           </div>
-          <form class="contact-form fade-in-up" id="contactForm">
-            <div class="form-group">
-              <label for="name">Name</label>
-              <input type="text" id="name" name="name" required />
-            </div>
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" required />
-            </div>
-            <div class="form-group">
-              <label for="message">Message</label>
-              <textarea
-                id="message"
-                name="message"
-                rows="5"
-                required
-              ></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Send Message</button>
-            <p class="form-note">
-              Note: This form is for demonstration. In a production environment,
-              it would connect to a backend service.
-            </p>
-          </form>
         </div>
       </div>
     </section>
