--- a/default.html
+++ b/default.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Elite Hat | Portfolio" />
     <title>Elite Hat | Portfolio</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <!-- Navigation -->
@@ -65,8 +66,7 @@
           <div class="about-text fade-in-up">
             <p>
               Hello! I'm <strong>Abdun Nafay Rathore</strong>, and I go by the
-              professional name <strong>Elite Hat</strong>. I'm a beginner
-              developer and a lifelong learner, currently focused on front-end
+              professional name <strong>Elite Hat</strong>. I'm a Tech Enthusiast, Industry Analyst and a lifelong learner, currently focused on front-end
               development.
             </p>
             <p>
@@ -331,7 +331,5 @@
         </p>
       </div>
     </footer>
-
-    <script src="script.js"></script>
   </body>
 </html>
